(1.0.0) Problems fixed and default models can be transferred to target path so it can run smoothly

--- a/cfg/staple.cfg
+++ b/cfg/staple.cfg
@@ -1,10 +1,9 @@
 # Staple Configuration File
 
-# Counter-Strike model directory path
+# Model dosyalarının listesi, virgülle ayrılmış
+default_models=PG-150.mdl,arcticorange.mdl,arcticorangeT.mdl,backweapons.mdl,bag.mdl,bench.mdl,bigtree.mdl,bush.mdl,chick.mdl,conveyor1.mdl,conveyor2.mdl,conveyor3.mdl,conveyor_turn.mdl,dummyguerilla.mdl,feather.mdl,fern.mdl,gesch1.mdl,gesch2.mdl,grass.mdl,grass_01.spr,guerilla.mdl,head.mdl,hostage.mdl,hostage01.mdl,hostage02.mdl,hostage03.mdl,hostage04.mdl,hostage05.mdl,hostage06.mdl,hostage07.mdl,hostage08.mdl,lv_bottle.mdl,orange.mdl,oranget.mdl,p_ak47.mdl,p_aug.mdl,p_awp.mdl,p_c4.mdl,p_deagle.mdl,p_elite.mdl,p_famas.mdl,p_fiveseven.mdl,p_flashbang.mdl,p_g3sg1.mdl,p_galil.mdl,p_glock18.mdl,p_hegrenade.mdl,p_knife.mdl,p_m249.mdl,p_m3.mdl,p_m3super90.mdl,p_m4a1.mdl,p_mac10.mdl,p_mp5.mdl,p_p228.mdl,p_p90.mdl,p_scout.mdl,p_sg550.mdl,p_sg552.mdl,p_shield.mdl,p_smokegrenade.mdl,p_tmp.mdl,p_ump45.mdl,p_usp.mdl,p_xm1014.mdl,pallet.mdl,pallet_with_bags.mdl,pallet_with_bags2.mdl,palmtree.mdl,pi_bush.mdl,pi_fern.mdl,pi_outlamp1.mdl,pi_shrub.mdl,pi_stlamp.mdl,pi_tree.mdl,pi_tree1.mdl,pi_tree2.mdl,pi_tree3.mdl,pi_treeb.mdl,pi_twig.mdl,player.mdl,pred_plant.mdl,pshell.mdl,qloader.mdl,qtruck.mdl,rshell.mdl,rshell_big.mdl,smann.mdl,support1.mdl,support2.mdl,support3.mdl,truck.mdl,v_ak47.mdl,v_aug.mdl,v_awp.mdl,v_c4.mdl,v_deagle.mdl,v_elite.mdl,v_famas.mdl,v_fiveseven.mdl,v_flashbang.mdl,v_g3sg1.mdl,v_galil.mdl,v_glock18.mdl,v_hegrenade.mdl,v_knife.mdl,v_knife_r.mdl,v_m249.mdl,v_m3.mdl,v_m4a1.mdl,v_mac10.mdl,v_mp5.mdl,v_p228.mdl,v_p90.mdl,v_scout.mdl,v_sg550.mdl,v_sg552.mdl,v_shield_r.mdl,v_smokegrenade.mdl,v_tmp.mdl,v_ump45.mdl,v_usp.mdl,v_xm1014.mdl,vipgun.mdl,w_ak47.mdl,w_assault.mdl,w_aug.mdl,w_awp.mdl,w_backpack.mdl,w_c4.mdl,w_deagle.mdl,w_elite.mdl,w_famas.mdl,w_fiveseven.mdl,w_flashbang.mdl,w_g3sg1.mdl,w_galil.mdl,w_glock18.mdl,w_hegrenade.mdl,w_kevlar.mdl,w_knife.mdl,w_m249.mdl,w_m3.mdl,w_m4a1.mdl,w_mac10.mdl,w_mp5.mdl,w_p228.mdl,w_p90.mdl,w_scout.mdl,w_sg550.mdl,w_sg552.mdl,w_shield.mdl,w_smokegrenade.mdl,w_thighpack.mdl,w_tmp.mdl,w_ump45.mdl,w_usp.mdl,w_xm1014.mdl,wbaum.mdl,winebottle.mdl
+
+# Diğer yapılandırma seçenekleri
 model_directory=./cstrike/models/
-
-# Path to the directory containing default models
-default_model_directory=./default_models/
-
-# Logging level (ERROR, WARN, INFO, DEBUG)
+default_model_directory=./res/default_models/
 log_level=INFO
